# IMDBhs

./: IMDBhs.cabal  README.md
app/: Main.hs
scripts/: analyze-movies.sh
src/: Lib.hs  Movies.hs  Roman.hs  TestData.hs
test/resources/: test.1  test.2
