name:                IMDBhs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/IMDBhs#readme
license:             BSD3
license-file:        LICENSE
author:              Christoph Bruecke
maintainer:          carabolic@gmail.com
copyright:           2015 Christoph Bruecke
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Movies
                     , Roman
  build-depends:       base >= 4.7 && < 5
                     , attoparsec == 0.12.1.6
                     , bytestring
                     , text == 1.2.1.3
  default-language:    Haskell2010

executable IMDBhs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , IMDBhs
                     , attoparsec == 0.12.1.6
                     , bytestring
                     , directory == 1.2.2.0
                     , text == 1.2.1.3
                     , zlib
  default-language:    Haskell2010

test-suite IMDBhs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , IMDBhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carabolic/imdbhs
